# tp-3-maciej_dawid

./: CMakeLists.txt  example.cpp  python_test.py
